--- a/index.html
+++ b/index.html
@@ -30,19 +30,35 @@
 
             <ul>
                 <li id="item-1" class="item">
-                    <span>Pão de forma</span>
+                    <label>
+                        <input type="checkbox">
+                        <span>Pão de forma</span>
+                        <button class="delete-button" aria-label="Remover item">
+                    </label>
                 </li>
 
                 <li id="item-2" class="item">
-                    <span>Café</span>
+                    <label>
+                        <input type="checkbox">
+                        <span>Café</span>
+                        <button class="delete-button" aria-label="Remover item">
+                    </label>
                 </li>
 
                 <li id="item-3" class="item">
-                    <span>Suco de laranja</span>
+                    <label>
+                        <input type="checkbox">
+                        <span>Iogurte</span>
+                        <button class="delete-button" aria-label="Remover item">
+                    </label>
                 </li>
 
                 <li id="item-4" class="item">
-                        <span>Leite</span>
+                    <label>
+                        <input type="checkbox">
+                        <span>Suco de maçã</span>
+                        <button class="delete-button" aria-label="Remover item">
+                    </label>
                 </li>
             </ul>
         </main>
