Adicionando função de adicionar, remover item e criando o alert

--- a/index.html
+++ b/index.html
@@ -24,47 +24,18 @@
 
         <main>
             <form>
-                <input type="text" placeholder="Adicione um novo item" id="add-item">
-                <button type="submit" id="btn" class="button">Adicionar item</button>
+                <input type="text" placeholder="Adicione um novo item" id="item-input">
+                <button type="submit" id="add-item" class="button">Adicionar item</button>
             </form>
 
             <ul>
-                <li id="item-1" class="item">
-                    <label>
-                        <input type="checkbox">
-                        <span>Pão de forma</span>
-                        <button class="delete-button" aria-label="Remover item">
-                    </label>
-                </li>
-
-                <li id="item-2" class="item">
-                    <label>
-                        <input type="checkbox">
-                        <span>Café</span>
-                        <button class="delete-button" aria-label="Remover item">
-                    </label>
-                </li>
-
-                <li id="item-3" class="item">
-                    <label>
-                        <input type="checkbox">
-                        <span>Iogurte</span>
-                        <button class="delete-button" aria-label="Remover item">
-                    </label>
-                </li>
-
-                <li id="item-4" class="item">
-                    <label>
-                        <input type="checkbox">
-                        <span>Suco de maçã</span>
-                        <button class="delete-button" aria-label="Remover item">
-                    </label>
-                </li>
+                
             </ul>
         </main>
 
     </header>
 
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="scripts.js"></script>
 </body>
 </html>
